2008-04-24  Andreas Kirschbaum

	* Improve readability of levels in skills dialog.

	* Update to #1881471 (Can't see statistics at character creation).
	Now a separate "Create New Character" dialog is opened. It shows
	the seven stat values and the text messages. While not an optimal
	solution it allows character creation.

	* Allow numppad cursor keys in command input.

	* Do not trigger key binding for ENTER when finishing a command
	input by pressing ENTER.

2008-04-23  Andreas Kirschbaum

	* Change text colors in message window to make it more readable.

	* Update tooltips when scrolling the server selection window.

2008-04-20  Yann Chachkoff

        * Add support for the "<hostname>:<port>" syntax in the server selection
        screen.

        * Add support for the "<hostname>:<port>" syntax on the command line.

2008-04-20  Andreas Kirschbaum

	* Add auto-pickup dialog.

2008-04-13  Andreas Kirschbaum

	* Display book contents at top of page.

	* prelude: Use black font for books to improve readability.

	* Properly format tooltips for spells.

	* Properly reset animation states when re-connecting to a server.

	* Save keybindings.txt and shortcuts.txt only if changed.

	* Show contents of "quit", "disconnect", and "help" dialogs.

	* Replace the question mark of a spell when the face becomes
	available.

	* Remove support for servers not supporting the spellmon=1 setup
	command.

2008-04-12  Andreas Kirschbaum

	* ragnorok: Add label and tooltip to experience gauge.

	* Fix display of negative grace values.

2008-04-11  Andreas Kirschbaum

	* Fix crash when the log window merges duplicate messages.

2008-03-30  Andreas Kirschbaum

	* Add screenshot command.

2008-03-24  Andreas Kirschbaum

	* Fix magic map parser to include more details.

2008-03-23  Andreas Kirschbaum

	* Fix #1881471 (Can't see statistics at character creation) by
	automatically opening both messages and status dialogs when
	creating a new character.
