@@ -1,3 +1,7 @@
+2008-04-26  Andreas Kirschbaum
+
+	* Add support for map sizes other than 17x13 to map skin command.
+
 2008-04-24  Andreas Kirschbaum
 
 	* Improve readability of levels in skills dialog.
